# stock-data-realtime

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  stock_data.py  test_stock_data.py
src/stock_data_realtime/: examples.py  stock_data.py  test_stock_data.py
